# peridot

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  link.rs  main.rs  output.rs  path.rs
