[package]
name = "dotty"
version = "0.1.0"
authors = ["whonore <wolfhonore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
