[package]
name = "dotty"
version = "0.1.0"
authors = ["Wolf Honoré <wolfhonore@gmail.com>"]
edition = "2018"
description = "A dotfile manager."
repository = "https://github.com/whonore/dotty"
license = "MIT"
keywords = ["dotfiles"]
categories = ["command-line-utilities", "config", "filesystem"]

[dependencies]
structopt = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ansi_term = "0.12"
