[package]
name = "peridot"
version = "0.1.1"
authors = ["Wolf Honoré <wolfhonore@gmail.com>"]
edition = "2018"
description = "A dotfile manager."
repository = "https://github.com/whonore/peridot"
license = "MIT"
keywords = ["dotfiles"]
categories = ["command-line-utilities", "config", "filesystem"]

[dependencies]
structopt = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ansi_term = "0.12"
dirs = "3.0"
shellexpand = "2.0"
